fixed header overlapping links

--- a/static/style.css
+++ b/static/style.css
@@ -47,7 +47,7 @@ a:hover {
 header {
     margin-left:0;
     margin-top: 0px;
-    max-width:700px;
+ 
     width: 92%; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
@@ -56,7 +56,7 @@ header {
     overflow-x: hidden; /* Disable horizontal scroll */
     /*overflow-y:scroll;*/
     padding-top: 0px; /* Place content 60px from the top */
-    
+      max-width:200px;
     vertical-align:baseline;
 }
 
@@ -211,6 +211,10 @@ footer {
   margin-left:0%;
 }
 
+
+header{
+     max-width:700px;
+}
 nav > div > ul {
   min-height:60px;
   font-size:24px;
